# Auto-Read-Paper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  main.yml  test.yml
config/: base.yaml  custom.yaml
scripts/: sanitize_custom_config.py
src/auto_read_paper/: construct_email.py  executor.py  history.py  llm_client.py  main.py  protocol.py  utils.py
src/auto_read_paper/reranker/: __init__.py  base.py  keyword_llm.py  reader_reviewer.py
src/auto_read_paper/retriever/: arxiv_retriever.py
src/zotero_arxiv_daily/: executor.py  protocol.py
src/zotero_arxiv_daily/reranker/: __init__.py  keyword_llm.py
state/: score_history.json
tests/: canned_responses.py  conftest.py  test_construct_email.py  test_llm_client.py  test_main.py  test_protocol.py  test_utils.py
tests/reranker/: conftest.py  test_reader_reviewer_domain_gate.py
tests/retriever/: test_arxiv_retriever.py  test_base_retriever.py  test_biorxiv_retriever.py  test_medrxiv_retriever.py
