[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "auto-read-paper"
version = "1.0.0"
description = "Daily arXiv paper digest: keyword filter + LLM scoring + Chinese deep-read, delivered by email via GitHub Actions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitignore-parser>=0.1.11",
    "tiktoken>=0.8.0",
    "feedparser>=6.0.11",
    "hydra-core>=1.3.2",
    "aiosmtpd>=1.4.6",
    "loguru>=0.7.3",
    "openai>=2.24.0",
    "arxiv>=2.4.0",
    "pymupdf4llm>=0.3.4",
    "pymupdf-layout>=1.27.1",
    "dotenv>=0.9.9",
    "trafilatura>=2.0.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that are slow (e.g. download models)",
]
filterwarnings = [
    "ignore::DeprecationWarning:multiprocessing",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0",
]
